--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,15 +2,15 @@
 <div class="container">
     <form>
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <label for="username" class="form-label">Username</label>
+          <input type="username" class="form-control" id="exampleUsername" [(ngModel)]='username' name="username" aria-describedby="emailHelp">
          
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+          <input type="password" [(ngModel)]="password" name="password" class="form-control" id="exampleInputPassword1">
         </div>
        
-        <button (click)="loginUser()" type="submit" class="btn btn-primary">Submit</button>
+        <button (click)="retrieve()" type="submit" class="btn btn-primary">login</button>
       </form>
 </div>
