--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -5,13 +5,16 @@
           <h5 class="text-center">
               Lets try out something!
           </h5> 
-          <div class="card">
-            <button (click)='callTheApi()' class="btn btn-outline-primary">Click Me</button>
-              <ul *ngFor='let results of result'>
-                 
-                  <li>{{results.description}}</li>
-              </ul>
-          </div> 
+         <div class="col-md-6"></div>
         </div>
     </div>
-</div>
+    <!-- <div *ngFor="let datas of data" class="card">
+        <button (click)='callTheApi()' class="btn btn-outline-primary">Click Me</button>
+          <ul *ngFor='let results of result'>
+             <span>{{results.Project.roject_name}}</span>
+             <img src="{{results.Project.Project_img}}" alt="">
+            <span>{{results.Projet.description}}</span>
+            <a href="{{ results.Project.project_url}}"></a>
+          </ul>
+      </div> 
+</div> -->
