add projects,profile and signup components

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -5,7 +5,9 @@
           <h5 class="text-center">
               Lets try out something!
           </h5> 
-         <div class="col-md-6"></div>
+         <div class="col-md-6">
+             Projects Awards 2021
+         </div>
         </div>
     </div>
     <!-- <div *ngFor="let datas of data" class="card">
@@ -17,4 +19,7 @@
             <a href="{{ results.Project.project_url}}"></a>
           </ul>
       </div> 
-</div> -->
+    </div> --> 
+
+    
+</div>
