--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,12 +10,14 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link active" href="#">Profile</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Projects</a>
           </li>
-         
+          <li class="nav-item active">
+            <a class="nav-link" href="#">SignUp</a>
+          </li>
        
         </ul>
       </div>
