--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,16 +7,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a routerlink="/main" routerLinkActive="active" class="nav-link active" aria-current="page" >Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#">Profile</a>
+            <a routerlink="/profile" routerLinkActive="active" class="nav-link active" >Profile</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Projects</a>
+            <a routerlink="/projects" routerLinkActive="active" class="nav-link" >Projects</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">SignUp</a>
+            <a routerlink="/signup" routerLinkActive="active" class="nav-link" >SignUp</a>
           </li>
        
         </ul>
