fixed routing bugs

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -20,6 +20,19 @@
           </ul>
       </div> 
     </div> --> 
+    <div class="row">
+        <div *ngFor="let results of result" class="col-md-4">
+            <div class="card" style="width: 18rem;">
+                <img src="" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">{{results.project_name}}</h5>
+                  <p class="card-text">{{results.description}}</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+        </div>
+    </div>
 
-    
+
 </div>
+<router-outlet></router-outlet>
