--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <router-outlet></router-outlet>
 <app-navbar></app-navbar>
-<app-login></app-login>
+<!-- <app-login></app-login> -->
 <!-- <app-main></app-main> -->
