--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,25 +1,27 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Awards</a>
+      <a class="navbar-brand">Awards</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a routerlink="/main" routerLinkActive="active" class="nav-link active" aria-current="page" >Home</a>
+            <a routerLink="/main" routerLinkActive="active" class="nav-link active" aria-current="page"  >Home</a>
           </li>
           <li class="nav-item">
-            <a routerlink="/profile" routerLinkActive="active" class="nav-link active" >Profile</a>
+            <a routerLink="/profile" routerLinkActive="active" class="nav-link active" >Profile</a>
           </li>
           <li class="nav-item active">
-            <a routerlink="/projects" routerLinkActive="active" class="nav-link" >Projects</a>
+            <a routerLink="/projects" routerLinkActive="active" class="nav-link" >Projects</a>
           </li>
           <li class="nav-item active">
-            <a routerlink="/signup" routerLinkActive="active" class="nav-link" >SignUp</a>
+            <a routerLink="/signup" routerLinkActive="active" class="nav-link" >SignUp</a>
           </li>
+
        
         </ul>
       </div>
     </div>
   </nav>
+  <router-outlet></router-outlet>
