--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav text-center">
           <li class="nav-item">
             <a routerLink="/main" routerLinkActive="active" class="nav-link active" aria-current="page"  >Home</a>
           </li>
@@ -17,6 +17,9 @@
           </li>
           <li class="nav-item active">
             <a routerLink="/signup" routerLinkActive="active" class="nav-link" >SignUp</a>
+          </li>
+          <li class="nav-item active">
+            <a routerLink="/login" routerLinkActive="active" class="nav-link" >Login</a>
           </li>
 
        
