--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,5 +1,12 @@
 <div class="container">
-    <h2>Welcome to Awards!</h2>
+  <div class="banner">
+    <h2 class="text-center">
+      Welcome to Awards!
+    </h2>
+    <h5>
+      Where Every Progress matters however small!
+    </h5>
+  </div>
     <div class="row">
         <div class="col-md-4">
           <h5 class="text-center">
