--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
             <a routerLink="/main" routerLinkActive="active" class="nav-link active" aria-current="page"  >Home</a>
           </li>
           <li class="nav-item">
-            <a routerLink="/profile" routerLinkActive="active" class="nav-link active" >Profile</a>
+            <a routerLink="/profile" routerLinkActive="active" class="nav-link " >Profile</a>
           </li>
           <li class="nav-item active">
             <a routerLink="/projects" routerLinkActive="active" class="nav-link" >Projects</a>
