style the landing page

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,12 +1,15 @@
-<div class="container">
-  <div class="banner">
-    <h2 class="text-center">
-      Welcome to Awards!
-    </h2>
-    <h5>
-      Where Every Progress matters however small!
-    </h5>
+<div class="banner image-fluid">
+  <div class="landing" style="color: white ;">
+
   </div>
+  <h2 class="text-center"  >
+    Welcome to Awards!
+  </h2>
+  <h5>
+    Where Every Progress matters however small!
+  </h5>
+</div>
+<div class="container"> 
     <div class="row">
         <div class="col-md-4">
           <h5 class="text-center">
