remove unneccessary styles on the landing page

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,13 +1,16 @@
 <div class="banner image-fluid">
   <div class="landing" style="color: white ;">
-
+    <div class="bg-text">
+      <h2 class="text-center"  >
+        Welcome to Awards!
+      </h2>
+      <h5 class="text-center">
+        Where Every Progress matters however small!
+      </h5>
+    </div>
+   
   </div>
-  <h2 class="text-center"  >
-    Welcome to Awards!
-  </h2>
-  <h5>
-    Where Every Progress matters however small!
-  </h5>
+  
 </div>
 <div class="container"> 
     <div class="row">
