--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -1,7 +1,34 @@
+*{
+    box-sizing: border-box;
+}
 .banner{
-    background: url('../../../assets/Images/background.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0,0,0,0.3)),url('../../../assets/Images/background.jpg');
+    /* opacity: 0.95; */
+    filter: blur(1px);
+    -webkit-filter: blur(0px);
     background-size: 100% 100%;
     height: 70vh;
     color: white;
+    background-position: center;
+    background-repeat: no-repeat;
 
+}
+.landing{
+    padding-top: 30vh;
+}
+.bg-text{
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0, 0.4); 
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    border-radius: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 40%;
+    padding: 20px;
+    text-align: center;
 }
