add a register form in signup component

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -5,7 +5,7 @@
         Welcome to Awards!
       </h2>
       <h5 class="text-center">
-        Where Every Progress matters however small!
+        Where Every Progress matters however small it may seem ~ <em>Esquire</em>
       </h5>
     </div>
    
@@ -14,25 +14,18 @@
 </div>
 <div class="container"> 
     <div class="row">
+      <h5 class="text-center">
+        Lets try something out!
+    </h5> 
         <div class="col-md-4">
-          <h5 class="text-center">
-              Lets try out something!
-          </h5> 
+          <h3>
+            Best Projects reviews
+          </h3>
          <div class="col-md-6">
              Projects Awards 2021
          </div>
         </div>
     </div>
-    <!-- <div *ngFor="let datas of data" class="card">
-        <button (click)='callTheApi()' class="btn btn-outline-primary">Click Me</button>
-          <ul *ngFor='let results of result'>
-             <span>{{results.Project.roject_name}}</span>
-             <img src="{{results.Project.Project_img}}" alt="">
-            <span>{{results.Projet.description}}</span>
-            <a href="{{ results.Project.project_url}}"></a>
-          </ul>
-      </div> 
-    </div> --> 
     <div class="row">
         <div *ngFor="let results of result" class="col-md-4">
             <div class="card" style="width: 18rem;">
