--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,2 +1,29 @@
-<p>signup works!</p>
-<router-outlet></router-outlet>
+<div class="container">
+    <form>
+        <div class="mb-3">
+            <label for="firstName" class="form-label">First Name</label>
+            <input type="username" class="form-control" id="exampleUsername"  name="username" aria-describedby="emailHelp">
+           
+          </div>
+        <div class="mb-3">
+          <label for="lastName" class="form-label">Last Name</label>
+          <input type="lastName" class="form-control" id="exampleUsername"  name="lastName" aria-describedby="emailHelp">
+         
+        </div>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="exampleUsername"  name="email" aria-describedby="emailHelp">
+           
+          </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input type="password"  name="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Confrim Password</label>
+            <input type="password1"  name="confirmPassword" class="form-control" id="exampleInputPassword1">
+          </div>
+        <button  type="submit" class="btn btn-primary">Register</button>
+      </form>
+</div>
+
