add profile component

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,2 +1,30 @@
-<p>projects works!</p>
-<router-outlet></router-outlet>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            card
+        </div>
+        <div class="col-md-4">
+            card
+        </div>
+        <div class="col-md-4">
+            <form action="">
+                <div class="mb-3">
+                    <label for="project_name" class="form-label">Project Name</label>
+                    <input type="text"  name="projectName" class="form-control" id="projectName">
+                </div>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Project Description</label>
+                    <input type="text"  name="description" class="form-control" id="description">
+                </div>
+                <div class="mb-3">
+                    <label for="project_url" class="form-label">Insert Project image</label>
+                    <input type="image"  name="image" class="form-control" id="image">
+                </div>
+                <div class="mb-3">
+                    <label for="project_url" class="form-label">Project Url Link</label>
+                    <input type="url"  name="project_url" class="form-control" id="project_url">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
