--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <form>
+    <h1 class="text-center">Sign Up Here!</h1>
+    <form class="mt-5">
         <div class="mb-3">
             <label for="firstName" class="form-label">First Name</label>
             <input type="username" class="form-control" id="exampleUsername"  name="username" aria-describedby="emailHelp">
@@ -23,6 +24,11 @@
             <label for="exampleInputPassword1" class="form-label">Confrim Password</label>
             <input type="password1"  name="confirmPassword" class="form-control" id="exampleInputPassword1">
           </div>
+          <div>
+            <span><input type="checkbox"> Click To confirm user Registration.</span> 
+
+          </div>
+          <br>
         <button  type="submit" class="btn btn-primary">Register</button>
       </form>
 </div>
