--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,7 +10,8 @@
           <label for="exampleInputPassword1" class="form-label">Password</label>
           <input type="password" [(ngModel)]="password" name="password" class="form-control" id="exampleInputPassword1">
         </div>
-       
-        <button (click)="retrieve()" type="submit" class="btn btn-primary">login</button>
+       <div  class="mb-3">
+        <button (click)="retrieve()" type="submit" class="btn btn-primary" >login</button>
+       </div>
       </form>
 </div>
