--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,10 +1,20 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-4">
-            card
-        </div>
-        <div class="col-md-4">
-            card
+        <div class="col-md-8">
+            <div *ngFor="let results of result" class="col-md-4 col-sm-12">
+                <div class="card" style="width: 18rem;">
+                  <h5 class="card-title">{{ results.project_name }}</h5>
+                    <img src="{{ results.project_img }}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">{{ results.description }}...</p>
+                      <a href="{{ results.project_url }}}" class="btn btn-outline-primary ">View Project</a>
+                                    
+                    </div>
+                    <div class="mb-3 ">
+                      <a class="btn btn-outline-secondary mb-3 ms-3" routerLink="/projects" routerLinkActive="active">View the project</a>    
+                    </div>
+                  </div>
+            </div>
         </div>
         <div class="col-md-4">
             <form action="">
@@ -16,14 +26,12 @@
                     <label for="description" class="form-label">Project Description</label>
                     <input type="text"  name="description" class="form-control" id="description">
                 </div>
-                <div class="mb-3">
-                    <label for="project_url" class="form-label">Insert Project image</label>
-                    <input type="image"  name="image" class="form-control" id="image">
-                </div>
+                
                 <div class="mb-3">
                     <label for="project_url" class="form-label">Project Url Link</label>
                     <input type="url"  name="project_url" class="form-control" id="project_url">
                 </div>
+                <button type="submit" class="btn btn-outline-primary">Submit</button>
             </form>
         </div>
     </div>
