modified project_url in main component.html

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -33,7 +33,7 @@
                 <img src="{{ results.project_img }}" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">{{ results.description }}...</p>
-                  <a href="{{ results.project_url }}}" class="btn btn-outline-primary ">View Project</a>
+                  <a href="{{ results.project_url }}" class="btn btn-outline-primary ">View Project</a>
                                 
                 </div>
                 <div class="mb-3 ">
