--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,19 +1,27 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-8 mb-3">
             <div *ngFor="let results of result" class="col-md-4 col-sm-12">
                 <div class="card" style="width: 18rem;">
                   <h5 class="card-title">{{ results.project_name }}</h5>
                     <img src="{{ results.project_img }}" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">{{ results.description }}...</p>
-                      <a href="{{ results.project_url }}}" class="btn btn-outline-primary ">View Project</a>
+                      <a href="{{ results.project_url }}" class="btn btn-outline-primary ">View Project</a>
                                     
                     </div>
-                    <div class="mb-3 ">
-                      <a class="btn btn-outline-secondary mb-3 ms-3" routerLink="/projects" routerLinkActive="active">View the project</a>    
-                    </div>
+                    
                   </div>
+                  <!-- <div *ngFor="let datas of data" class="mb-3 ">
+
+                    <ul>
+                        <span>{{}}</span>
+                        <li>{{}}</li>
+                        <li>{{}}</li>
+                        <li>{{}}</li>
+                        <li>{{}}</li>
+                    </ul>   
+                  </div> -->
             </div>
         </div>
         <div class="col-md-4">
