modify signup template

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="row">
-        <div class="col-md-8 mb-3">
+    <div class="row mb-3">
+        <div class="col-md-8 ">
             <div *ngFor="let results of result" class="col-md-4 col-sm-12">
                 <div class="card" style="width: 18rem;">
                   <h5 class="card-title">{{ results.project_name }}</h5>
