--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,9 +1,14 @@
 <div class="container">
     <h1 class="text-center">Sign Up Here!</h1>
     <form class="mt-5">
+      <div class="mb-3">
+        <label for="username" class="form-label">Username</label>
+        <input type="username" class="form-control" id="exampleUsername"  name="username" aria-describedby="emailHelp">
+       
+      </div>
         <div class="mb-3">
             <label for="firstName" class="form-label">First Name</label>
-            <input type="username" class="form-control" id="exampleUsername"  name="username" aria-describedby="emailHelp">
+            <input type="firstname" class="form-control" id="exampleUsername"  name="username" aria-describedby="emailHelp">
            
           </div>
         <div class="mb-3">
