--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
         <div class="mb-3">
           <label for="username" class="form-label">Username</label>
           <input type="username" class="form-control" id="exampleUsername" [(ngModel)]='username' name="username" aria-describedby="emailHelp">
-         
+        
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
@@ -12,6 +12,9 @@
         </div>
        <div  class="mb-3">
         <button (click)="retrieve()" type="submit" class="btn btn-primary" >login</button>
+       </div>
+       <div class="me-3">
+         <button (click)="logout()" type="submit" class="btn btn-danger">Logout</button>
        </div>
       </form>
 </div>
