--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -12,19 +12,12 @@
   </div>
   
 </div>
-<div class="container"> 
+<div class="container-fluid mx-auto w-75"> 
     <div class="row">
       <h5 class="text-center">
         Lets try something out!
     </h5> 
-        <div class="col-md-4">
-          <h3>
-            Best Projects reviews
-          </h3>
-         <div class="col-md-6">
-             Projects Awards 2021
-         </div>
-        </div>
+        
     </div>
     <div class="row mt-5 ">
         <div *ngFor="let results of result" class="col-md-4 col-sm-12">
