--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -3,38 +3,39 @@
     <form class="mt-5">
       <div class="mb-3">
         <label for="username" class="form-label">Username</label>
-        <input type="username" class="form-control" id="exampleUsername"  name="username" aria-describedby="emailHelp">
+        <input type="username" class="form-control" id="exampleUsername" [(ngModel)]='username' name="username" aria-describedby="emailHelp">
        
       </div>
         <div class="mb-3">
             <label for="firstName" class="form-label">First Name</label>
-            <input type="firstname" class="form-control" id="exampleUsername"  name="username" aria-describedby="emailHelp">
+            <input type="name" class="form-control" id="exampleUsername" [(ngModel)]="first_name" name="first_name" aria-describedby="emailHelp">
            
           </div>
         <div class="mb-3">
-          <label for="lastName" class="form-label">Last Name</label>
-          <input type="lastName" class="form-control" id="exampleUsername"  name="lastName" aria-describedby="emailHelp">
+          <label for="lastName" [(ngModel)]="last_name"class="form-label">Last Name</label>
+          <input type="lastName"  class="form-control" id="exampleUsername"  name="last_name" aria-describedby="emailHelp">
          
         </div>
         <div class="mb-3">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="exampleUsername"  name="email" aria-describedby="emailHelp">
+            <input type="email" [(ngModel)]="email" class="form-control" id="exampleUsername"  name="email" aria-describedby="emailHelp">
            
           </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password"  name="password" class="form-control" id="exampleInputPassword1">
+          <input type="password" [(ngModel)]="password" name="password" class="form-control" id="exampleInputPassword1">
         </div>
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Confrim Password</label>
-            <input type="password1"  name="confirmPassword" class="form-control" id="exampleInputPassword1">
+            <input type="password" [(ngModel)]="password_confirm"  name="password_confirm" class="form-control" id="exampleInputPassword1">
           </div>
           <div>
             <span><input type="checkbox"> Click To confirm user Registration.</span> 
 
           </div>
           <br>
-        <button  type="submit" class="btn btn-primary">Register</button>
+        <button (click)="onSubmit()" type="submit" class="btn btn-primary">Register</button>
       </form>
 </div>
+
 
